test/regress/coverage-error-caret.test
; Test error.cc: line_context caret indicator

2024/01/01 Test
    Expenses:Food   $10.00 @@ @@
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 4:
While parsing posting:
  Expenses:Food   $10.00 @@ @@
                            ^^
Error: No quantity specified for amount
end test
